includesubdir = $(includedir)/asm-x86

includesub_HEADERS =	\
	arith_32.h	\
	arith_64.h	\
	arith.h		\
	atomic.h	\
	atomic_asm.h	\
	calibration.h	\
	c1e.h		\
	features_32.h	\
	features_64.h	\
	features.h	\
	fptest.h	\
	hal_32.h	\
	hal_64.h	\
	hal.h		\
	smi.h		\
	switch_32.h	\
	switch_64.h	\
	switch.h	\
	syscall.h	\
	system.h	\
	tsc.h		\
	wrappers_32.h	\
	wrappers_64.h	\
	wrappers.h

SUBDIRS = bits
