includesubdir = $(includedir)/cobalt

includesub_HEADERS = \
	core.h \
	errno.h \
	fcntl.h \
	mqueue.h \
	pthread.h \
	sched.h \
	semaphore.h \
	signal.h \
	stdio.h \
	stdlib.h \
	syscall.h \
	syslog.h \
	time.h \
	unistd.h \
	wrappers.h

SUBDIRS =		\
	asm-arm 	\
	asm-blackfin 	\
	asm-generic 	\
	asm-nios2 	\
	asm-powerpc 	\
	asm-sh		\
	asm-x86		\
	kernel		\
	sys
