includesubdir = $(includedir)/copperplate

includesub_HEADERS =	\
	core.h		\
	clockobj.h	\
	cluster.h	\
	debug.h		\
	hash.h		\
	heapobj.h	\
	init.h		\
	list.h		\
	lock.h		\
	shared-list.h	\
	private-list.h	\
	notifier.h	\
	panic.h		\
	reference.h	\
	registry.h	\
	syncobj.h	\
	threadobj.h	\
	traceobj.h	\
	wrappers.h
