includesubdir = $(includedir)/copperplate

includesub_HEADERS =		\
	clockobj.h		\
	cluster.h		\
	debug.h			\
	eventobj.h		\
	heapobj.h		\
	init.h			\
	reference.h		\
	registry.h		\
	semobj.h		\
	syncobj.h		\
	threadobj.h		\
	timerobj.h		\
	traceobj.h		\
	wrappers.h

noinst_HEADERS =		\
	registry-obstack.h
