includedir = $(prefix)/include/nucleus

include_HEADERS = \
	assert.h \
	bheap.h \
	bind.h \
	compiler.h \
	core.h \
	heap.h \
	intr.h \
	jhash.h \
	ltt.h \
	module.h \
	pipe.h \
	pod.h \
	queue.h \
	registry.h \
	shadow.h \
	synch.h \
	system.h \
	thread.h \
	timer.h \
	types.h \
	version.h \
	xenomai.h
