includesubdir = $(includedir)/nucleus

includesub_HEADERS = \
	assert.h \
	bheap.h \
	bufd.h \
	compiler.h \
	heap.h \
	hostrt.h \
	intr.h \
	jhash.h \
	map.h \
	module.h \
	pipe.h \
	pod.h \
	ppd.h \
	queue.h \
	registry.h \
	select.h \
	sched.h \
	schedparam.h \
	schedqueue.h \
	sched-idle.h \
	sched-rt.h \
	sched-sporadic.h \
	sched-tp.h \
	shadow.h \
	stat.h \
	synch.h \
	system.h \
	sys_ppd.h \
	thread.h \
	timebase.h \
	timer.h \
	trace.h \
	types.h \
	vdso.h \
	seqlock.h \
	version.h \
	xenomai.h \
	vfile.h
